--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <!-- legendas -->
         <h2 class="position-absolute p-3 ps-5 text-white bg-danger animate__animated animate__fadeInDown animate__delay-2s" style="top: 50%; left: 0;">
-            DESENHAMOS O<br>COM VOCÊ
+            DESENHAMOS O FUTURO<br>COM VOCÊ!
         </h2>
         <h2 class="position-absolute p-3 pe-5 text-white bg-primary animate__animated animate__lightSpeedInLeft animate__delay-3s" style="bottom: 60px; right: 0;">
             A ESCOLA DA SUA VIDA
