--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marco Design</title>
+    <title>MS DESIGN</title>
     <!-- css do bootstrap -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="node_modules/animate.css/animate.css" />
     <!-- css customizado -->
     <style type="text/css">
-        .header-intro {
+        .ms-header-intro {
             width: calc(100vw - 1rem);
             height: 100vh;
             /* 100% da largura e altura da janela aberta */
         }
 
-        #backgroundslider,
-        #backgroundslider>.carousel-inner,
-        #backgroundslider>.carousel-inner .carousel-item,
-        #backgroundslider>.carousel-inner .carousel-item img {
+        #ms-backgroundslider,
+        #ms-backgroundslider>.carousel-inner,
+        #ms-backgroundslider>.carousel-inner .carousel-item,
+        #ms-backgroundslider>.carousel-inner .carousel-item img {
             width: 100%;
             height: 100%;
             /* 100% de altura e largura diante da caixa de onde estão postos */
@@ -31,11 +31,11 @@
             overflow-x: hidden;
         }
 
-        .ajuste-corte-img {
+        .ms-ajuste-corte-img {
             object-fit: cover;
         }
 
-        .ajuste-img-card {
+        .ms-ajuste-card {
             height: calc(3 / 4 * 100%) !important;
             object-fit: cover !important;
         }
@@ -43,18 +43,18 @@
         /** carregando uma fonte */
         @font-face {
             font-family: "DIMITRI";
-            src: url("assets/fonts/dimitri/DIMITRI_.TTF");
+            src: url("ASSETS/fonts/dimitri/DIMITRI_.TTF");
         }
 
         @font-face {
             font-family: "METRO";
-            src: url("assets/fonts/metro/Metro.otf");
+            src: url("ASSETS/fonts/metro/Metro.otf");
         }
 
-        .logo {
-            font-family: "DIMITRI";
-            font-size: 2.8rem;
-            text-shadow: 1px 0.5px 4px rgba(0, 0, 0, 0.603);
+        .ms-logo {
+            font-family: "METRO";
+            font-size: 2.3rem;
+            color: var(--bs-blue) !important;
         }
     </style>
 </head>
@@ -63,13 +63,13 @@
 
     <!-- inicio do menu de navegação -->
     <nav class="navbar fixed-top">
-        <div class="container align-items-start">
+        <div class="container-fluid align-items-start">
             <a href="#" class="navbar-brand">
-                <span class="logo text-white">MARCO</span>
+                <span class="ms-logo text-white">MS_DESIGN</span>
             </a>
 
-            <div>
-                <button class="btn btn-danger">Agende uma</button>
+            <div class="pt-2">
+                <button class="btn btn-danger">Agende uma Visita</button>
                 <button class="btn btn-warning">
                     Menu
                     <i class="bi bi-list"></i>
@@ -81,24 +81,24 @@
 
     <header class="header-intro">
         <!-- ínicio do slider -->
-        <div id="backgroundslider" class="carousel slide" data-bs-ride="carousel">
+        <div id="ms-backgroundslider" class="carousel slide" data-bs-ride="carousel">
             <!-- slides -->
             <div class="carousel-inner">
                 <div class="carousel-item" data-bs-interval="3500">
-                    <img src="assets/img/img1.jpg" class="ajuste-corte-img" />
+                    <img src="ASSETS/images/slider/img1.jpg" class="ms-ajuste-corte-img" />
                 </div>
                 <div class="carousel-item active" data-bs-interval="3500">
-                    <img src="assets/img/img2.jpg" class="ajuste-corte-img" />
+                    <img src="ASSETS/images/slider/img2.jpg" class="ms-ajuste-corte-img" />
                 </div>
                 <div class="carousel-item" data-bs-interval="3500">
-                    <img src="assets/img/img3.jpg" class="ajuste-corte-img" />
+                    <img src="ASSETS/images/slider/img3.jpg" class="ms-ajuste-corte-img" />
                 </div>
             </div>
             <!-- botões indicadores -->
             <div class="carousel-indicators">
-                <button type="button" data-bs-target="#backgroundslider" data-bs-slide-to="0"></button>
-                <button type="button" data-bs-target="#backgroundslider" data-bs-slide-to="1" class="active"></button>
-                <button type="button" data-bs-target="#backgroundslider" data-bs-slide-to="2"></button>
+                <button type="button" data-bs-target="#ms-backgroundslider" data-bs-slide-to="0"></button>
+                <button type="button" data-bs-target="#ms-backgroundslider" data-bs-slide-to="1" class="active"></button>
+                <button type="button" data-bs-target="#ms-backgroundslider" data-bs-slide-to="2"></button>
             </div>
         </div>
         <!-- fim do slide -->
@@ -129,7 +129,7 @@
         <div class="row justify-content-center px-5">
             <div class="mb-5 col-10 col-md-8 col-lg-4">
                 <div class="card h-100 border-0">
-                    <img src="assets/img-cards/img1.jpg" class="card-img-top ajuste-img-card">
+                    <img src="ASSETS/images/cards/img1.jpg" class="card-img-top ms-ajuste-card">
                     <div class="card-body">
                         <h4 class="card-title">Boa gestão</h4>
                         <p>Faça sua consultoria com quem entende e tem bom espirito de mercado.</p>
@@ -138,7 +138,7 @@
             </div>
             <div class="mb-5 col-10 col-md-8 col-lg-4">
                 <div class="card h-100 border-0">
-                    <img src="assets/img-cards/img2.jpg" class="card-img-top ajuste-img-card">
+                    <img src="ASSETS/images/cards/img2.jpg" class="card-img-top ms-ajuste-card">
                     <div class="card-body">
                         <h4 class="card-title">Habilidades</h4>
                         <p>Esteja ao lado de quem entende, com as melhores práticas do mercado profissional.</p>
@@ -147,7 +147,7 @@
             </div>
             <div class="mb-5 col-10 col-md-8 col-lg-4">
                 <div class="card h-100 border-0">
-                    <img src="assets/img-cards/img3.jpg" class="card-img-top ajuste-img-card">
+                    <img src="ASSETS/images/cards/img3.jpg" class="card-img-top ms-ajuste-card">
                     <div class="card-body">
                         <h4 class="card-title">Crescimento</h4>
                         <p>Alavanque o seu negócio, com foco no que é importante para você e seus clientes.</p>
@@ -160,7 +160,6 @@
     <footer class="container-fluid bg-info">
         <h6 class="text-center pt-5">&copy; 2021 MARCO DESIGN - TODOS OS DIREITOS LIVRES.</h6>
 
-        <br>
         <br>
         <br>
 
